--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
 language: ruby
 rvm:
   - 2.3.0
+before_install:
+  - sudo apt-get -qq update
+  - sudo apt-get install -y libtag1-dev
 script: rspec
