--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,5 @@ rvm:
 before_install:
   - sudo apt-get -qq update
   - sudo apt-get install -y libtag1-dev
-script: rspec
+script:
+  - bundle exec rspec
